--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==1.0.0
 Django==4.0.6
 django-auth==0.1.9
 django-heroku==0.3.1
+gunicorn==20.1.0
 idna==3.3
 mongoengine==0.24.2
 oauthlib==3.2.0
