--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==37.0.4
 defusedxml==0.7.1
 dj-database-url==1.0.0
 Django==4.0.6
+django-allauth==0.51.0
 django-auth==0.1.9
 django-heroku==0.3.1
 gunicorn==20.1.0
